# HackserCam

./: .gitattributes  .gitignore  README.md  pyproject.toml  train_model.ipynb
src/: Main.py
src/Utils/: Logger.py
src/hackser_cam/: main.py  shared_resource.py
src/hackser_cam/analyzers/: __init__.py
src/hackser_cam/analyzers/color_spectrum/: __init__.py  color_spectrum.py
src/hackser_cam/analyzers/contrast_analyzer/: __init__.py  contrast_analyzer.py
src/hackser_cam/analyzers/edge_detection/: __init__.py  edge_detection.py
src/hackser_cam/analyzers/fft/: __init__.py
src/hackser_cam/analyzers/greyscale_detection/: __init__.py  greyscale_detection.py
src/hackser_cam/analyzers/ml/: __init__.py
src/hackser_cam/core/: interfaces.py
src/hackser_cam/flask_frontend/: __init__.py  routes.py
src/hackser_cam/flask_frontend/home_page/: __init__.py
src/hackser_cam/flask_frontend/static/css/: style.min.css
src/hackser_cam/flask_frontend/static/js/: chart.js
src/hackser_cam/flask_frontend/templates/: home.html
src/hackser_cam/utils/: logger.py
